--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "repository": "git@github.com:martanara/Simple-Express-App.git",
   "author": "Marta Nara <marta.kos1230@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "npx nodemon server.js"
+  },
   "dependencies": {
-    "express": "4.17.1"
+    "add": "^2.0.6",
+    "express": "4.17.1",
+    "express-handlebars": "3.1.0",
+    "global": "^4.4.0",
+    "nodemon": "^2.0.15"
   }
 }
