--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "4.17.1",
     "express-handlebars": "3.1.0",
     "global": "^4.4.0",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15"
   }
 }
